# arxiv-cli

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
src/: arxiv_search.rs  config.rs  lib.rs  main.rs  models.rs
src/cdp/: browser.rs  connection.rs  page.rs
src/scripts/: check_search_results.js  extract_paper.js  extract_search_results.js
