[package]
name = "arxiv-cli"
version = "0.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.30"
pdf-extract = "0.10.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
